Header, Nav, Cover, Proyecto, --- , Fase, Equipo

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Economica:wght@700&family=Lexend:wght@300;400;600&family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Casas Cala</title>
   </head>
@@ -52,7 +51,56 @@
       </div>
       <div class="info-image"></div>
     </section>
-
     <!-- Fin de Info -->
+
+    <!-- Proyecto-->
+    <section class="container-proyecto"></section>
+    <!-- Fin de Proyecto -->
+
+    <!-- Galeria -->
+    <section class="container-galery">
+      <div class="pendiente">GALERIA PENDIENTE</div>
+    </section>
+    <!-- Fin de Galeria-->
+
+    <!-- Etapa -->
+    <section class="container-phase">
+      <h3 class="phase-title">ETAPA EN LA QUE SE ENCUENTRA EL PROYECTO</h3>
+
+      <div class="container-phase-status">
+        <div class="phase-status">
+          <img src="images/phase/planificacion.png" alt="planificacion" class="phase-plan" />
+          <span>PLANIFICACIÓN</span>
+        </div>
+        <div class="phase-status">
+          <img src="images/phase/ejecucion.png" alt="ejecucion" class="phase-exe" />
+          <span>EJECUCIÓN</span>
+        </div>
+        <div class="phase-status">
+          <img src="images/phase/entrega.png" alt="entrega" class="phase-plan" />
+          <span>ENTREGA</span>
+        </div>
+      </div>
+    </section>
+    <!-- Fin de Etapa -->
+
+    <!-- Nuestro Equipo-->
+    <section class="team-section">
+      <h3 class="team-title">NUESTRO EQUIPO</h3>
+
+      <div class="container-team">
+        <div class="team">
+          <img src="images/team/arquitecto.png" alt="Arquitecto" />
+          <span class="team-name">PABLO GATICA</span>
+          <span class="team-pos">ARQUITECTO</span>
+        </div>
+        <div class="team">
+          <img src="images/team/desarrollador.png" alt="Desarrollador" />
+          <span class="team-name">ANGELACCIO</span>
+          <span class="team-pos">DESARROLLADOR</span>
+        </div>
+      </div>
+    </section>
+    <!-- Fin de Nuestro Equipo -->
   </body>
 </html>
