Header, Nav, Cover, Info, Proyecto, ---, Etapa, Equipo, ---, formulario, footer

--- a/index.html
+++ b/index.html
@@ -102,5 +102,31 @@
       </div>
     </section>
     <!-- Fin de Nuestro Equipo -->
+
+    <!-- Articulos de interes -->
+    <section class="container-articles">
+      <div class="pendiente">ARTICULOS DE INTERES PENDIENTE</div>
+    </section>
+    <!-- Fin de Articulos de interes-->
+
+    <!-- Formulario -->
+    <section class="container-form">
+      <form class="form" action="">
+        <h3 class="form-title">CONTÁCTANOS</h3>
+        <input class="input" type="text" name="Nombre" placeholder="Nombre y apellido" />
+        <input class="input" type="text" name="E-mail" placeholder="E-mail" />
+        <input class="input" type="text" name="Teléfono" placeholder="Teléfono" />
+        <textarea class="input-msg" name="Mensaje" placeholder="Mensaje"></textarea>
+        <input class="btn-send" type="button" value="Enviar" />
+      </form>
+    </section>
+    <!-- Fin de Formulario -->
+    <!-- Footer -->
+    <footer class="footer">
+      <img src="images/footer_image.png" alt="Logo" class="footer-img" />
+      <span class="contact-info"> +54 9 XX XXXX-XXXX</span>
+      <span class="contact-info">info@XXXXX.com</span>
+    </footer>
+    <!-- Fin de Footer -->
   </body>
 </html>
