--- a/index.html
+++ b/index.html
@@ -18,14 +18,34 @@
   </head>
   <body>
     <!-- Header-Nav-Portada  -->
-    <header class="header">
+    <header class="header" id="header">
       <!-- Nav -->
-      <nav class="nav">
-        <a href="#">INFO</a>
-        <a href="#">PROYECTO</a>
-        <a href="#">GALERIA</a>
-        <a href="#">EQUIPO</a>
-        <a href="#Contacto">CONTACTO</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-* NavBarSet">
+        <div class="container-fluid ">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Info</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Proyecto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Galeria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Equipo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
       </nav>
       <!-- Fin de Nav -->
 
@@ -142,7 +162,7 @@
     <!-- Fin de Etapa -->
 
     <!-- Nuestro Equipo-->
-    <section class="team-section">
+    <section class="team-section" >
       <h3 class="team-title">NUESTRO EQUIPO</h3>
 
       <div class="container-team">
@@ -175,14 +195,18 @@
     <!-- Footer -->
     <footer class="footer">
       <img src="images/footer_image.png" alt="Logo" class="footer-img" />
-      <span class="contact-info"> +54 9 XX XXXX-XXXX</span>
-      <span class="contact-info">info@XXXXX.com</span>
+      <span class="contact-info"> +54 9 3512 47-4928</span>
+      <span class="contact-info">matiasangelaccio03@gmail.com</span>
     </footer>
     <!-- Fin de Footer -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
-    <i class="fa fa-whatsapp my-float"></i>
+    <a href="https://api.whatsapp.com/send?phone=5493512474928&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n." class="float" target="_blank">
+      <i class="fa fa-whatsapp my-float"></i>
+    </a>
+
+    <a href="#header" class="float2Left">
+      <img src="./images/17041950551543238859.svg">
     </a>
     
 
