--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="#">Info</a>
+                <a class="nav-link" href="#info">Info</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Proyecto</a>
+                <a class="nav-link" href="#proyecto">Proyecto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Galeria</a>
+                <a class="nav-link" href="#galeriaaaa">Galeria</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Equipo</a>
+                <a class="nav-link" href="#sectioooon">Equipo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="#Contacto">Contacto</a>
               </li>
               
             </ul>
@@ -61,7 +61,7 @@
     <!-- Fin de Header-Nav-Portada -->
 
     <!-- Info -->
-    <section class="container-info">
+    <section class="container-info" id="info">
       <div class="info">
         <div class="info-text">
           <h3 class="info-text-title">¿QUÉ ES CASAS CALA?</h3>
@@ -77,13 +77,13 @@
     <!-- Fin de Info -->
 
     <!-- Proyecto-->
-    <section class="container-proyecto">
+    <section class="container-proyecto" id="proyecto">
       
     </section>
     <!-- Fin de Proyecto -->
 
     <!-- Galeria -->
-    <section class="container-galery">
+    <section class="container-galery" id="galeriaaaa">
       <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap" rel="stylesheet">
 
       <div class="gallery">
@@ -141,7 +141,7 @@
     <!-- Fin de Galeria-->
 
     <!-- Etapa -->
-    <section class="container-phase">
+    <section class="container-phase" id="phaseeee">
       <h3 class="phase-title">ETAPA EN LA QUE SE ENCUENTRA EL PROYECTO</h3>
 
       <div class="container-phase-status">
@@ -162,7 +162,7 @@
     <!-- Fin de Etapa -->
 
     <!-- Nuestro Equipo-->
-    <section class="team-section" >
+    <section class="team-section" id="sectioooon">
       <h3 class="team-title">NUESTRO EQUIPO</h3>
 
       <div class="container-team">
