--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
 
     <!-- Formulario -->
     <section class="container-form">
-      <form class="form" action="" id="Contacto">
+      <form class="form" id="Contacto">
         <h3 class="form-title">CONTÁCTANOS</h3>
-        <input class="input" type="text" name="Nombre" placeholder="Nombre y apellido" />
-        <input class="input" type="text" name="E-mail" placeholder="E-mail" />
-        <input class="input" type="text" name="Teléfono" placeholder="Teléfono" />
-        <textarea class="input-msg" name="Mensaje" placeholder="Mensaje"></textarea>
-        <input class="btn-send" type="button" value="Enviar" />
+        <input class="input" type="text" name="Nombre" id="Nombre" placeholder="Nombre y apellido" />
+        <input class="input" type="text" name="E-mail" id="email" placeholder="E-mail" />
+        <input class="input" type="text" name="Teléfono" id="phone" placeholder="Teléfono" />
+        <textarea class="input-msg" name="Mensaje" placeholder="Mensaje" id="message"></textarea>
+        <input class="btn-send" type="reset" id="sendbtn" value="Enviar" />
       </form>
     </section>
     <!-- Fin de Formulario -->
@@ -209,6 +209,10 @@
       <img src="./images/17041950551543238859.svg">
     </a>
     
+
+    <script src="/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 
     <!-- Script de bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
