--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <span>PLANIFICACIÓN</span>
         </div>
         <div class="phase-status">
-          <img src="images/phase/ejecucion.png" alt="ejecucion" class="phase-exe" />
+          <img src="images/Ellipse 4.png" alt="ejecucion" class="phase-exe" />
           <span>EJECUCIÓN</span>
         </div>
         <div class="phase-status">
@@ -210,8 +210,6 @@
     </a>
     
 
-    <script src="/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 
     <!-- Script de bootstrap 5 -->
