--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
 
     <!-- Proyecto-->
     <section class="container-proyecto" id="proyecto">
-      
+        <div class="hover1"></div>
+        <div class="hoverSection"> <div class="textRotated">Disponible</div> </div>
+        <div class="hoverSection"> <div class="textRotated">Disponible</div> </div>
+        <div class="hoverSection"> <div class="textRotated">Disponible</div> </div>
+        <div class="hoverSection"> <div class="textRotated">Reservada</div> </div>
     </section>
     <!-- Fin de Proyecto -->
 
