--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <!-- Proyecto-->
     <section class="container-proyecto" id="proyecto">
         <div class="hover1"></div>
-        <div class="hoverSection"> <div class="textRotated">Disponible</div> </div>
-        <div class="hoverSection"> <div class="textRotated">Disponible</div> </div>
-        <div class="hoverSection"> <div class="textRotated">Disponible</div> </div>
+        <div class="hoverSection" id="11"> <div class="textRotated">Disponible</div> </div>
+        <div class="hoverSection" id="12"> <div class="textRotated">Disponible</div> </div>
+        <div class="hoverSection" id="13"> <div class="textRotated">Disponible</div> </div>
         <div class="hoverSection"> <div class="textRotated">Reservada</div> </div>
     </section>
     <!-- Fin de Proyecto -->
@@ -210,7 +210,7 @@
     </a>
 
     <a href="#header" class="float2Left">
-      <img src="./images/17041950551543238859.svg">
+      
     </a>
     
 
